# SiriusxLLM

./: .clangd  .gitignore  CMakeLists.txt  README.md  platform.sh  run.sh  vcpkg.json
cmake/: cuda.cmake
demo/: CMakeLists.txt  chat.cpp  chat_qwen2.cpp  demo_chat_qwen2.cpp  demo_llama2.cpp  demo_llama3.cpp  demo_qwen2.cpp  gen_llama2.cpp  gen_qwen2.cpp  generate.cpp  llama2.cpp  main_llama2.cpp  main_llama3.cpp  main_qwen2.cpp
python/: chat.py  llama3.py  qwen2.py
siriusx/include/base/: alloc.h  base.h  buffer.h  cuda_config.h  tick.h
siriusx/include/model/: config.h  llama2.h  model.h  raw_model_data.h
siriusx/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
siriusx/include/sampler/: argmax_sampler.h  sampler.h
siriusx/include/tensor/: tensor.h
siriusx/src/base/: alloc.cpp  alloc_cpu.cpp  alloc_cuda.cpp  base.cpp  buffer.cpp  unicode.cpp
siriusx/src/model/: llama2.cpp  model.cpp  qwen2.cpp  raw_model_data.cpp
siriusx/src/op/: add.cpp  embedding.cpp  encode.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
siriusx/src/op/kernels/: interface.cpp  interface.h
siriusx/src/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.cpp  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h
siriusx/src/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cu  argmax_kernel.cuh  emb_kernel.cu  emb_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  swiglu_kernel.cu  swiglu_kernel.cuh
siriusx/src/sampler/: argmax_sampler.cpp
siriusx/src/tensor/: tensor.cpp
test/: CMakeLists.txt  test.cpp  test_main.cpp  utils.cu  utils.cuh
test/test_example/: example.cpp  example.cu
test/test_model/: test_llama2.cpp  test_load.cpp
test/test_op/: test_add.cpp  test_emb.cpp  test_layer.cpp  test_matmul.cpp  test_rmsnorm.cpp  test_rope.cpp  test_scale.cpp  test_swiglu.cpp
test/test_tensor/: test_alloc.cpp  test_buffer.cpp  test_tensor.cpp
tools/: config.json  export.py  export_llama3.py  export_qwen2.py  model.py  model_qwen2.py
web/: app.py
